set locale of en_CA not en_US. remove the Facebook-specific fail text

--- a/canadian.html
+++ b/canadian.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Canadian, eh?</title>
 <meta property="og:type" content="website">
-<meta property="og:locale" content="en_US">
+<meta property="og:locale" content="en_CA">
 <meta property="og:title" content="Canadian, eh?">
 <link rel="canonical" href="http://examples.opengraphprotocol.us/canadian.html">
 <meta property="og:url" content="http://examples.opengraphprotocol.us/canadian.html">
@@ -12,6 +12,5 @@
 </head>
 <body>
 <p>Some Canadians speak English. If I wanted to localize to Canadian English I might add a locale of en_CA.</p>
-<p><a href="https://developers.facebook.com/docs/internationalization/">Facebook only understands specific locales</a>, causing Canada to fail.</p>
 </body>
 </html>
