reference article datetime tests from index and sitemap

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 <header><h2>Global object namespace</h2></header>
 <ul>
 <li><a href="/article.html">Article</a></li>
+<li><a href="/article-utc.html">Article w/ UTC datetime</a></li>
+<li><a href="/article-offset.html">Article w/ UTC offset</a></li>
 <li><a href="/book.html">Book</a></li>
 <li><a href="/book-isbn10.html">Book w/ ISBN-10</a></li>
 <li><a href="/profile.html">Profile</a></li>
