--- a/video-movie.html
+++ b/video-movie.html
@@ -4,16 +4,17 @@
 <meta charset="utf-8">
 <title>Arrival of a Train at La Ciotat</title>
 <meta property="og:title" content="Arrival of a Train at La Ciotat">
+<meta property="og:description" content="L'arrivée d'un train en gare de La Ciotat is an 1895 French short black-and-white silent documentary film directed and produced by Auguste and Louis Lumière. Its first public showing took place in January 1896.">
 <meta property="og:site_name" content="Open Graph protocol examples">
 <meta property="og:type" content="video.movie">
 <meta property="og:locale" content="en_US">
 <link rel="canonical" href="http://examples.opengraphprotocol.us/video-movie.html">
 <meta property="og:url" content="http://examples.opengraphprotocol.us/video-movie.html">
-<meta property="og:image" content="http://examples.opengraphprotocol.us/media/images/50.png">
-<meta property="og:image:secure_url" content="https://d72cgtgi6hvvl.cloudfront.net/media/images/50.png">
-<meta property="og:image:width" content="50">
-<meta property="og:image:height" content="50">
-<meta property="og:image:type" content="image/png">
+<meta property="og:image" content="http://examples.opengraphprotocol.us/media/images/train.jpg">
+<meta property="og:image:secure_url" content="https://d72cgtgi6hvvl.cloudfront.net/media/images/train.jpg">
+<meta property="og:image:width" content="500">
+<meta property="og:image:height" content="328">
+<meta property="og:image:type" content="image/jpeg">
 <meta property="og:video" content="http://fpdownload.adobe.com/strobe/FlashMediaPlayback.swf?src=http%3A%2F%2Fexamples.opengraphprotocol.us%2Fmedia%2Fvideo%2Ftrain.mp4">
 <meta property="og:video:secure_url" content="https://fpdownload.adobe.com/strobe/FlashMediaPlayback.swf?src=https%3A%2F%2Fd72cgtgi6hvvl.cloudfront.net%2Fmedia%2Fvideo%2Ftrain.mp4">
 <meta property="og:video:type" content="application/x-shockwave-flash">
